--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "unpkg": "dist/datacash.min.js",
   "dependencies": {
     "bitcore-explorers": "^1.0.1",
-    "bitcore-lib-cash": "^0.18.1"
+    "bitcore-lib-cash": "^0.18.1",
+    "superagent": "^3.8.3"
   },
   "files": [
     "dist"
